--- a/BulkyBookWeb/Views/Category/Index.cshtml
+++ b/BulkyBookWeb/Views/Category/Index.cshtml
@@ -24,6 +24,8 @@
                 <th>
                 Display Order
                 </th>
+                <th></th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -35,6 +37,12 @@
                 </td>
                 <td width="30%">
                     @obj.DisplayOrder
+                </td>
+                <td>
+                    <div class="w-75 btn-group" role="group">
+                            <a class="btn btn-primary mx-2" asp-controller="Category" asp-action="Edit" asp-route-id="@obj.Id"><i class="bi bi-pencil-square"></i>Edit</a>
+                            <a class="btn btn-danger mx-2" asp-controller="Category" asp-action="Delete" asp-route-id="@obj.Id"><i class="bi bi-trash3"></i>Delete</a>
+                    </div>
                 </td>
                 </tr>
             }
